crates/aion-awl/tests/fixtures/rev2/declarations/invalid/duplicate_arg_name.awl
//! The send call passes the same named argument twice.
workflow notify_once
  input message: String
  outcome sent: type Receipt, route success
  outcome dropped: type Receipt, route failure

type Receipt { id: String, accepted: Bool }

worker notifier
  action send_message(message: String) -> Receipt

step send
  send_message(message: message, message: "again") -> receipt

  outcome ok: when receipt.accepted, route sent(id: receipt.id, accepted: receipt.accepted)
  outcome dud: otherwise, route dropped(id: receipt.id, accepted: receipt.accepted)
